# syn-sightline-tng

./: .gitignore  .pyproject.toml.swp  404.html  AGENTS.md  LICENSE.txt  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: ci.yml  deploy_docs.yml
about/: index.html
contributing/: index.html
docs/: contributing.md  index.md
examples/: README.md  quickstart.ipynb
examples/mock_data/: snapshot_mock.json
installation/: index.html
license/: index.html
search/: search_index.json
syn_sightline_tng/: __init__.py  cli.py  core.py  geometry.py  io.py
tests/: test_smoke.py
user-guide/configuration-options/: index.html
user-guide/getting-started/: index.html
