[project]
name = "syn-sightline-tng"
version = "0.1.1a1"
# description of the project
description = "Repository for implementation of a faster Ray Tracing and synthetic spectral spectroscopy in AREPO based TNG simulations"
readme = "README.md"
# license 
license = "MIT"
license-files = ["LICENSE.txt"]
# authors 
author = [
	{name = "Tanmay Singh", email = "tsingh65@asu.edu"}
]
# Python Versions Needed
requires-python = ">=3.10"
# dependencies needed
dependencies = [
	"numpy >= 1.25",
	"h5py >= 3.1"
]
keywords = ["Cosmological Simulations", "Synthetic Spectroscopy"]
classifiers = [
	"Development Status :: 3 - Alpha",
]


[project.urls]

Homepage = "https://trident-project.org/"
Source = "https://github.com/tanmay-starslab/syn-sightline-tng"
Issue = "https://github.com/tanmay-starslab/syn-sightline-tng/issues/new"

